--- a/upload/admin/view/template/cms/antispam_form.twig
+++ b/upload/admin/view/template/cms/antispam_form.twig
@@ -2,8 +2,8 @@
 <div id="content">
   <div class="page-header">
     <div class="container-fluid">
-      <div class="float-end"><button type="submit" form="form-antispam" data-bs-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><span class="fa-solid fa-floppy-disk"></span></button>
-        <a href="{{ back }}" data-bs-toggle="tooltip" title="{{ button_back }}" class="btn btn-light"><span class="fa-solid fa-reply"></span></a>
+      <div class="float-end"><button type="submit" form="form-antispam" data-bs-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+        <a href="{{ back }}" data-bs-toggle="tooltip" title="{{ button_back }}" class="btn btn-light"><i class="fa-solid fa-reply"></i></a>
       </div>
       <h1>{{ heading_title }}</h1>
       <ol class="breadcrumb">
@@ -15,7 +15,7 @@
   </div>
   <div class="container-fluid">
     <div class="card">
-      <div class="card-header"><i class="fa-solid fa-pencil"></span> {{ text_form }}</div>
+      <div class="card-header"><i class="fa-solid fa-pencil"></i> {{ text_form }}</div>
       <div class="card-body">
         <form id="form-antispam" action="{{ save }}" method="post" data-oc-toggle="ajax">
           <div class="row mb-3">
