--- a/upload/admin/view/template/common/column_left.twig
+++ b/upload/admin/view/template/common/column_left.twig
@@ -1,5 +1,5 @@
 <nav id="column-left">
-	<div id="navigation"><span class="fa-solid fa-bars"></span> {{ text_navigation }}</div>
+	<div id="navigation"><i class="fa-solid fa-bars"></i> {{ text_navigation }}</div>
 	<ul id="menu">
 		{% set i = 0 %}
 		{% for menu in menus %}
