--- a/upload/admin/view/template/tool/menu.twig
+++ b/upload/admin/view/template/tool/menu.twig
@@ -17,7 +17,7 @@
   </div>
   <div class="container-fluid">
     <div class="card">
-      <div class="card-header"><i class="fa-solid fa-list"></i> {{ text_list }}</div>
+      <div class="card-header"><span class="fa-solid fa-list"></i> {{ text_list }}</div>
       <div id="list" class="card-body">{{ list }}</div>
     </div>
   </div>
