--- a/upload/admin/view/template/tool/upgrade.twig
+++ b/upload/admin/view/template/tool/upgrade.twig
@@ -52,7 +52,7 @@
         <fieldset>
           <legend>{{ text_status }}</legend>
           <div class="input-group input-group-lg">
-            <button type="button" id="button-upgrade" class="btn btn-warning btn-lg"{% if not upgrade %} disabled{% endif %}><i class="fa-solid fa-level-up-alt"></i> {{ button_upgrade }}</button>
+            <button type="button" id="button-upgrade" class="btn btn-warning btn-lg"{% if not upgrade %} disabled{% endif %}><span class="fa-solid fa-level-up-alt"></i> {{ button_upgrade }}</button>
             <input type="text" id="input-upgrade" value="{{ text_ready }}" class="form-control bg-white" readonly/>
           </div>
         </fieldset>
