--- a/upload/admin/view/template/sale/returns_list.twig
+++ b/upload/admin/view/template/sale/returns_list.twig
@@ -26,7 +26,7 @@
               <td class="d-none d-lg-table-cell">{{ return.model }}</td>
               <td>{{ return.return_status }}</td>
               <td class="d-none d-lg-table-cell">{{ return.date_added }}</td>
-              <td class="text-end"><a href="{{ return.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></span></a></td>
+              <td class="text-end"><a href="{{ return.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
