--- a/upload/admin/view/template/user/user_authorize.twig
+++ b/upload/admin/view/template/user/user_authorize.twig
@@ -19,7 +19,7 @@
             <td>{{ authorize.status }}</td>
             <td>{{ authorize.date_added }}</td>
             <td>{{ authorize.date_expire }}</td>
-            <td class="text-end"><a href="{{ authorize.delete }}" data-bs-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><span class="fa-solid fa-minus-circle"></i></a></td>
+            <td class="text-end"><a href="{{ authorize.delete }}" data-bs-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></a></td>
           </tr>
         {% endfor %}
       {% else %}
