--- a/upload/admin/view/template/cms/topic_list.twig
+++ b/upload/admin/view/template/cms/topic_list.twig
@@ -22,7 +22,7 @@
                   <span class="badge bg-danger">{{ text_disabled }}</span>
                 {% endif %}</td>
               <td class="text-end">{{ topic.sort_order }}</td>
-              <td class="text-end text-nowrap"><a href="{{ topic.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></span></a></td>
+              <td class="text-end text-nowrap"><a href="{{ topic.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
