--- a/upload/admin/view/template/tool/menu.twig
+++ b/upload/admin/view/template/tool/menu.twig
@@ -3,8 +3,8 @@
   <div class="page-header">
     <div class="container-fluid">
       <div class="float-end">
-        <a href="{{ link_add }}" data-bs-toggle="tooltip" title="{{ button_link }}" class="btn btn-primary"><i class="fa-solid fa-plus"></span></a>
-        <a href="{{ dropdown_add }}" data-bs-toggle="tooltip" title="{{ button_dropdown }}" class="btn btn-warning"><i class="fa-solid fa-plus"></span></a>
+        <a href="{{ link_add }}" data-bs-toggle="tooltip" title="{{ button_link }}" class="btn btn-primary"><i class="fa-solid fa-plus"></i></a>
+        <a href="{{ dropdown_add }}" data-bs-toggle="tooltip" title="{{ button_dropdown }}" class="btn btn-warning"><i class="fa-solid fa-plus"></i></a>
         <button type="submit" form="form-menu" formaction="{{ delete }}" data-bs-toggle="tooltip" title="{{ button_delete }}" onclick="return confirm('{{ text_confirm }}');" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></button>
       </div>
       <h1>{{ heading_title }}</h1>
@@ -17,7 +17,7 @@
   </div>
   <div class="container-fluid">
     <div class="card">
-      <div class="card-header"><span class="fa-solid fa-list"></i> {{ text_list }}</div>
+      <div class="card-header"><i class="fa-solid fa-list"></i> {{ text_list }}</div>
       <div id="list" class="card-body">{{ list }}</div>
     </div>
   </div>
