--- a/upload/admin/view/template/tool/notification_list.twig
+++ b/upload/admin/view/template/tool/notification_list.twig
@@ -15,11 +15,11 @@
           {% for notification in notifications %}
             <tr id="notification-row-{{ notification_row }}"{% if not notification.status %} class="table-disabled"{% endif %}>
               <td class="text-center"><input type="checkbox" name="selected[]" value="{{ notification.notification_id }}" class="form-check-input"/></td>
-              <td class="text-primary" style="width: 1px;"><i class="fa-regular fa-bell fa-3x"></span></td>
+              <td class="text-primary" style="width: 1px;"><i class="fa-regular fa-bell fa-3x"></i></td>
               <td><a href="{{ notification.view }}" class="text-primary{% if not notification.status %} font-weight-bold{% endif %}">{{ notification.title }}</a>
                 <br/>
                 <div class="text-muted">{{ notification.date_added }}</div></td>
-              <td class="text-end"><button value="{{ notification.view }}" data-bs-toggle="tooltip" title="{{ button_view }}" id="button-view-{{ notification.notification_id }}" class="btn btn-primary"><i class="fa-solid fa-eye"></span></button></td>
+              <td class="text-end"><button value="{{ notification.view }}" data-bs-toggle="tooltip" title="{{ button_view }}" id="button-view-{{ notification.notification_id }}" class="btn btn-primary"><i class="fa-solid fa-eye"></i></button></td>
             </tr>
             {% set notification_row = notification_row + 1 %}
           {% endfor %}
