changed seo path to seo regex

--- a/upload/admin/view/template/design/seo_regex_form.twig
+++ b/upload/admin/view/template/design/seo_regex_form.twig
@@ -54,7 +54,7 @@
               <div class="form-text">{{ help_sort_order }}</div>
             </div>
           </div>
-          <input type="hidden" name="seo_path_id" value="{{ seo_path_id }}" id="input-seo-path-id"/>
+          <input type="hidden" name="seo_regex_id" value="{{ seo_regex_id }}" id="input-seo-regex-id"/>
         </form>
       </div>
     </div>
