--- a/upload/admin/view/template/design/seo_regex_list.twig
+++ b/upload/admin/view/template/design/seo_regex_list.twig
@@ -1,4 +1,4 @@
-<form id="form-seo-path" method="post" data-oc-toggle="ajax" data-oc-load="{{ action }}" data-oc-target="#list">
+<form id="form-seo-regex" method="post" data-oc-toggle="ajax" data-oc-load="{{ action }}" data-oc-target="#list">
   <div class="table-responsive">
     <table class="table table-bordered table-hover">
       <thead>
@@ -13,16 +13,16 @@
         </tr>
       </thead>
       <tbody>
-        {% if seo_paths %}
-          {% for seo_path in seo_paths %}
+        {% if seo_regexs %}
+          {% for seo_regex in seo_regexs %}
             <tr>
-              <td class="text-center"><input type="checkbox" name="selected[]" value="{{ seo_path.seo_path_id }}" class="form-check-input"/></td>
-              <td>{{ seo_path.query_match }}</td>
-              <td>{{ seo_path.query_replace }}</td>
-              <td>{{ seo_path.path_match }}</td>
-              <td>{{ seo_path.path_replace }}</td>
-              <td>{{ seo_path.sort_order }}</td>
-              <td class="text-end"><a href="{{ seo_path.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
+              <td class="text-center"><input type="checkbox" name="selected[]" value="{{ seo_regex.seo_regex_id }}" class="form-check-input"/></td>
+              <td>{{ seo_regex.query_match }}</td>
+              <td>{{ seo_regex.query_replace }}</td>
+              <td>{{ seo_regex.path_match }}</td>
+              <td>{{ seo_regex.path_replace }}</td>
+              <td>{{ seo_regex.sort_order }}</td>
+              <td class="text-end"><a href="{{ seo_regex.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
