--- a/upload/admin/view/template/design/seo_regex_form.twig
+++ b/upload/admin/view/template/design/seo_regex_form.twig
@@ -34,16 +34,16 @@
             </div>
           </div>
           <div class="row mb-3">
-            <label for="input-path-match" class="col-sm-2 col-form-label">{{ entry_path_match }}</label>
+            <label for="input-path-match" class="col-sm-2 col-form-label">{{ entry_keyword_match }}</label>
             <div class="col-sm-10">
-              <input type="text" name="path_match" value="{{ path_match }}" placeholder="{{ entry_path_match }}" id="input-path-match" class="form-control" required/>
+              <input type="text" name="keyword_match" value="{{ keyword_match }}" placeholder="{{ entry_keyword_match }}" id="input-path-match" class="form-control" required/>
               <div id="error-path-match" class="invalid-feedback"></div>
             </div>
           </div>
           <div class="row mb-3">
-            <label for="input-path-replace" class="col-sm-2 col-form-label">{{ entry_path_replace }}</label>
+            <label for="input-path-replace" class="col-sm-2 col-form-label">{{ entry_keyword_replace }}</label>
             <div class="col-sm-10">
-              <input type="text" name="path_replace" value="{{ path_replace }}" placeholder="{{ entry_path_replace }}" id="input-path-replace" class="form-control" required/>
+              <input type="text" name="keyword_replace" value="{{ keyword_replace }}" placeholder="{{ entry_keyword_replace }}" id="input-path-replace" class="form-control" required/>
               <div id="error-path-replace" class="invalid-feedback"></div>
             </div>
           </div>
