--- a/upload/admin/view/template/design/seo_regex_list.twig
+++ b/upload/admin/view/template/design/seo_regex_list.twig
@@ -6,8 +6,8 @@
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
           <th>{{ column_query_match }}</th>
           <th>{{ column_query_replace }}</th>
-          <th>{{ column_path_match }}</th>
-          <th>{{ column_path_replace }}</th>
+          <th>{{ column_keyword_match }}</th>
+          <th>{{ column_keyword_replace }}</th>
           <th>{{ column_sort_order }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
@@ -19,8 +19,8 @@
               <td class="text-center"><input type="checkbox" name="selected[]" value="{{ seo_regex.seo_regex_id }}" class="form-check-input"/></td>
               <td>{{ seo_regex.query_match }}</td>
               <td>{{ seo_regex.query_replace }}</td>
-              <td>{{ seo_regex.path_match }}</td>
-              <td>{{ seo_regex.path_replace }}</td>
+              <td>{{ seo_regex.keyword_match }}</td>
+              <td>{{ seo_regex.keyword_replace }}</td>
               <td>{{ seo_regex.sort_order }}</td>
               <td class="text-end"><a href="{{ seo_regex.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
